# tatu

./: .gitignore  Cargo.toml  PROTOCOL.md  README.md
client/: Cargo.toml
client/src/: claim.rs  keychain.rs  main.rs
common/: Cargo.toml
common/src/: keyfile.rs  keys.rs  lib.rs  model.rs  noise.rs  pinning.rs  vdf.rs
common/src/identity/: claim.rs  handle.rs  keyfile.rs  mod.rs  types.rs
common/src/primitives/: mod.rs  vdf.rs
common/src/protocol/: batch.rs  error.rs  mod.rs  noise.rs  packets.rs
server/: Cargo.toml
server/src/: main.rs
