[workspace]
members = ["common", "client", "server"]
resolver = "2"

[workspace.dependencies]
azalea = { git = "https://github.com/azalea-rs/azalea" }

blake2 = "0.10.6"
digest = "0.10.7"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
rand_core = "0.6"
rug = { version = "1.24", features = ["serde"] }
snow = "0.9"
bs58 = "0.5"


anyhow = "1.0"
tokio = { version = "1.48" } #features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5"
bincode = { version = "2.0", features = ["serde"] }
uuid = { version = "1.0", features = ["serde"] }
rand = "0.9"

# todo: move minecraft encryption to only server

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
