[workspace]
members = ["common", "client", "server"]
resolver = "3"

[profile.dev]
opt-level = 1

# NOTE: Without -O3, slow decrypts accumulate to create buffer bloat, causing a lag spike up to 2000~500 ms on chunk loading

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
ed25519 = { package = "ed25519-dalek", version = "2" }
x25519 = { package = "x25519-dalek", version = "2" }
rand = "0.8"

tokio = { version = "1.48" }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1.11"

azalea = { git = "https://github.com/azalea-rs/azalea/", version = "0.14", default-features = false }
rmp-serde = "1.3"

anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
base58 = "0.2.0"
uuid = "1.19"
once_cell = "1.21"
