[package]
name = "tatu-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tatu-common = { path = "../common" }
anyhow.workspace = true
tokio = { workspace = true, features = ["fs"] }
futures.workspace = true
bincode.workspace = true
azalea.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
rug.workspace = true
serde.workspace = true
serde-big-array.workspace = true
serde_json = "1.0"
