[package]
name = "tatu-client"
version = "0.2.0"
edition = "2024"

[dependencies]
tatu-common = { path = "../common" }

tokio.workspace = true
futures.workspace = true
azalea.workspace = true
bytes.workspace = true

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rmp-serde.workspace = true
thiserror.workspace = true
base58.workspace = true
clap.workspace = true
dirs = "5.0"
