[package]
name = "tatu-common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde-big-array.workspace = true
bincode.workspace = true
tokio = { workspace = true, features = ["io-util", "net"] }
tokio-util.workspace = true
azalea.workspace = true
blake2.workspace = true
digest.workspace = true
rug.workspace = true
ed25519-dalek.workspace = true
curve25519-dalek = "4"
uuid.workspace = true
rand_core.workspace = true
rand.workspace = true
snow.workspace = true
thiserror = "2.0"
