[package]
name = "tatu-common"
version = "0.2.0"
edition = "2024"

[dependencies]
ed25519 = { workspace = true, features = ["serde"] }
x25519.workspace = true
xeddsa = "1.0"

blake2 = "0.10"
rug = { version = "1.28", default-features = false, features = ["integer", "std", "serde"] } # consider crypto-bigint/crypto-primes
snow = { version = "0.10", default-features = false, features = [ "use-curve25519", "use-chacha20poly1305", "use-blake2", "use-getrandom" ] }
rand.workspace = true

azalea.workspace = true

serde = { version = "1.0", features = ["derive"] }
rmp-serde.workspace = true

tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
bytes.workspace = true

base58.workspace = true
uuid.workspace = true
once_cell.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
