[package]
name = "tatu-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tatu-common = { path = "../common" }
anyhow.workspace = true
tokio.workspace = true
futures.workspace = true
bincode.workspace = true
azalea.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid.workspace = true
blake2.workspace = true
digest.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
bs58.workspace = true
