[package]
name = "tatu-server"
version = "0.2.0"
edition = "2024"

[dependencies]
tatu-common = { path = "../common" }

tokio.workspace = true
futures.workspace = true
azalea.workspace = true
bytes.workspace = true

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
rmp-serde.workspace = true
once_cell.workspace = true
